# GenOVA

./: .dockerignore  .gitattributes  .gitignore  .graphifyignore  .railwayignore  AGENTS.md  ARCHITECTURE.md  CHECKPOINTS.md  CLAUDE.md  GEMINI.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  feature_list.json  generate_ui_stubs.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  skills-catalog.json  skills-lock.json  verify.ps1
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.prod  config.py  database.py  db_init.py  main.py  models.py  models_ova.py  package.json  pyproject.toml  rate_limit.py  requirements-dev.txt  requirements.txt  run_migrations.py  security.py  seed.py  seed_roles.py  worker.py
backend/agents/: audio_helpers.py  catalog_refresh.py  elaborate_prompts.py  engage_prompts.py  engage_router.py  evaluate_prompts.py  explain_prompts.py  explore_prompts.py  explore_router.py  html_validator.py  images.py  llm_router.py  podcast.py  router.py  utils.py
backend/api/: auth.py  generation.py  labs.py  llm.py  ova.py  rag.py  scorm.py  users.py
backend/auth/: cleanup.py  cookies.py  dependencies.py  email.py  email_normalize.py  models.py  register_router.py  reset_router.py  router.py  session_router.py  throttle.py  token_utils.py  totp_helpers.py  totp_login_router.py  totp_router.py  verify_router.py
backend/core/: config.py  database.py  log_redaction.py  models_base.py  observability.py  rate_limit.py  security.py
backend/generation/: error_log_service.py  jobs_helpers.py  jobs_materialize.py  jobs_model.py  jobs_progress.py  jobs_router.py  jobs_runner.py  jobs_runner_exec.py  jobs_service.py  regen_agents.py  regen_router.py  regen_service.py
backend/labs/: catalog.py  generation.py  generation_core.py  generation_routes.py  models.py  prompt_utils.py  router.py  service.py
backend/llm/: catalog_cache.py  catalog_refresh.py  catalog_refresh_providers.py  catalog_router.py  clients.py  elaborate_router.py  engage_router.py  evaluate_router.py  explain_router.py  explore_router.py  html_validator.py  image_providers.py  images.py  key_resolver.py  llm_config_store.py  llm_helpers.py  model_catalog.py  podcast.py  providers.py  providers_data.py  router.py  themes.py  utils.py
backend/migrations/: 000_schema_complete.sql  001_init.sql  002_add_password_hash.sql  003_auth_lockout.sql  004_roles_permissions.sql  005_ova_versions_phases.sql  006_ova_deleted_at.sql  007_ovas_missing_columns.sql  008_labs.sql  009_drop_prompt_versions.sql  010_pgvector.sql  011_rag_chunks.sql  012_ova_storage_key.sql  013_user_extended_profile_fields.sql  014_ova_phase_resource_metadata.sql  015_ovas_created_at_index.sql  016_migrations_applied.sql  017_soft_delete_indexes.sql  018_enable_rls.sql  018_ova_error_logs.sql  019_ova_generation_jobs.sql  020_ova_phase_versions.sql  021_user_llm_settings.sql  022_catalog_cache.sql  023_user_enabled_models.sql  024_ova_user_api_keys.sql  025_reset_orphan_generating_ovas.sql  026_user_links.sql  027_add_theme_settings.sql  027_user_theme_settings.sql  028_rls_policies.sql  029_email_verification.sql  029_user_resource_configs.sql  030_add_usuarios_prueba_role.sql  030_email_normalized_key.sql  031_jwt_blocklist.sql  032_totp_2fa.sql  033_drop_lab_results.sql  034_user_roles_is_primary.sql
backend/ova/: add_phase_router.py  duplicate_router.py  edit_helpers.py  edit_router.py  edit_view_router.py  error_log_model.py  error_log_service.py  generation_router.py  helpers.py  history_router.py  jobs_helpers.py  jobs_materialize.py  jobs_router.py  jobs_runner.py  jobs_runner_exec.py  jobs_service.py  llm_helpers.py  manage_router.py  models.py  phase_version_router.py  regen_agents.py  regen_router.py  regen_service.py  router.py  subelement_router.py  trash_batch_router.py  trash_router.py  uploads_service.py  uploads_state.py
backend/prometheus/: __init__.py  checkpointer.py  critic.py  critic_loop.py  graph.py  nodes_config.py  refine.py  runtime.py  state.py
backend/rag/: chunker.py  embedder.py  models.py  parsers.py  pipeline.py  retriever.py  router.py  store.py
backend/roles/: __init__.py  delete_router.py  models.py  router.py
backend/scorm/: __init__.py  router.py  service.py  template_html.py  template_scripts.py  template_style.py  template_xapi.py
backend/scripts/: sync_deps.py
backend/storage/: __init__.py  supabase_storage.py
backend/tests/: conftest.py  test_agents_io.py  test_latency.py  test_llm_config_store.py  (+5 more)
(+1377 files in other folders)
