[project]
name = "genova-backend"
version = "0.1.0"
description = "GenOVA backend — FastAPI service for AI-assisted Virtual Learning Objects (OVA) with SCORM 1.2 export."
requires-python = ">=3.11"
readme = "../readme.md"

# Mirror of requirements.txt — kept in sync manually.
# uv reads this; pip uses requirements.txt. Both must resolve to the same set.
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy==2.0.51",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "bcrypt==5.0.0",
    "PyJWT==2.13.0",
    "python-multipart==0.0.32",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.2",
    "slowapi==0.1.10",
    "openai==2.43.0",
    "groq==1.4.0",
    "supabase==2.31.0",
    "google-genai==2.9.0",
    "pypdf==6.13.3",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "langgraph==1.2.6",
    "langgraph-checkpoint-postgres==3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.18",
    "pytest>=9.1.1",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=5.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations", "scorm_output", "uploads", "venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "SIM", # simplify
]
ignore = [
    "E501",   # handled by formatter
    "B008",   # FastAPI Depends() in defaults is the standard pattern
    "S101",   # asserts allowed in tests
    "S104",   # 0.0.0.0 bind is intentional in dev
    "S110",   # try-except-pass acceptable in cleanup paths
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E"]
"tools/**" = ["S"]
"seed.py" = ["S105", "S106"]
"main.py" = ["E402"]
"ova/history_router.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
markers = [
    "bdd: BDD scenarios via pytest-bdd",
]
